# dxa

./: .gitignore  CITATION.cff  Dockerfile  README.md  _config.yml  _toc.yml  bibliography.bib  index.md  pyproject.toml
.github/workflows/: build_docs.yml  check_formatting.yml  deploy.yml  docker-image.yml  test_package.yml
demos/: linear_elasticity.py  poisson_mother.py  time_distributed_control.py
docker/: Dockerfile
docs/: api.rst  api_blocks.rst
src/dolfinx_adjoint/: __init__.py  assembly.py  function.py  moola_adapters.py  petsc_utils.py  solvers.py  utils.py
src/dolfinx_adjoint/blocks/: __init__.py  assembly.py  function_assigner.py  solvers.py  utils.py
src/dolfinx_adjoint/types/: __init__.py  function.py
tests/: playground.py  test_assemble_scalar.py  test_assign.py  test_dxa.py  test_linear_solver.py  test_poisson_mother.py  test_version.py  verify_poisson_mother_soa.py
